# TIP-OF-THE-ICEBERG

./: .env  .gitignore  Dockerfile  README.md  pyproject.toml  rxconfig.py
Alisto/: AlistoApp.swift  ContentView.swift  Profile.swift
Alisto.xcodeproj/: project.pbxproj
Alisto/Assets.xcassets/AppIcon.appiconset/: Contents.json
Alisto/Assets.xcassets/Color.colorset/: Contents.json
Alisto/Data Models/: Item.swift  Plu2.swift  Sample.swift
Alisto/Extensions/: ColorExtension.swift
Alisto/Views/: Alert.swift  Billing.swift  Home.swift  Settings.swift
Alisto/Views/Home/: Appliance.swift  Dashboard.swift  Fire.swift
Alisto/Web/: WebSocket.swift
AlistoTests/: AlistoTests.swift
AlistoUITests/: AlistoUITests.swift  AlistoUITestsLaunchTests.swift
app/: config.py  crud.py  database.py  main.py  models.py  mqtt_client.py  schemas.py  security.py  services.py  tasks.py  ws_manager.py
app/routers/: devices.py  reports.py  users.py  ws.py
frontend/: ApplianceCard.ts  Billing.ts  BillingWithPayment  Dashboard.ts  EnergyChart.ts  FireDetectionPanel.ts  FireSafetyPlan.ts  Home.ts  PowerStripVisualization.ts  Settings.ts  UserProfile.ts  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: AlertsPanel.tsx  BillingWithPayment.tsx  Home.tsx  Settings.tsx  UserProfile.tsx
project_alisto/: config.py  logic.py  models.py  mqtt_client.py  project_alisto.py
project_alisto/components/: __init__.py  socket_card.py  thermal_alerts.py
tests/: test_logic.py
(+2 files in other folders)
