[project]
name = "project-alisto"
version = "0.1.0"
description = ""
authors = [
    {name = "IndigonaBlue",email = "rdadeveyra@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "reflex (>=0.8.19,<0.9.0)",
    "paho-mqtt>=1.6.0",
    "python-dotenv>=1.0.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
